deployments/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advanced-observability
  labels:
    app.kubernetes.io/part-of: advanced-observability
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
